finito (da verificare css, troppo lungo)

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-  <title>Document</title>
+  <title>Fluentify</title>
 </head>
 <body>
   <!-- HEADER -->
-  
+
   <header>
     <div class="header-container">
 
       <div class="header-menu clearfix">
 
         <div class="logo-nav float-left">
-          <img src="img/logo.svg" alt="">
+          <img src="img/logo.svg" alt="logo">
         </div>
 
         <div class="central-nav float-left">
@@ -50,6 +50,9 @@
       </div>
     </div>
 
+    <div class="etichetta">
+      <a href="">HELP</a>
+    </div>
   </header>
 
   <main>
@@ -72,8 +75,9 @@
 
           <div class="part-left float-left">
 
-            <div class="prima-sezione ">
-              <img src="img/profile.svg" alt="">
+            <!-- primo elemento flottante -->
+            <div class="title">
+              <img src="img/profile.svg" alt="profilo">
               <p>Piano formativo configurato sul proprio livello</p>
             </div>
 
@@ -87,8 +91,9 @@
 
           <div class="part-center float-left">
 
-            <div class="seconda-sezione ">
-              <img src="img/computer.svg" alt="">
+            <!-- secondo elemento flottante -->
+            <div class="title">
+              <img src="img/computer.svg" alt="computer">
               <p>Affiancamento costante del tutor</p>
             </div>
 
@@ -102,8 +107,9 @@
 
           <div class="part-right float-left">
 
-            <div class="terza-sezione">
-              <img src="img/doc.svg" alt="">
+            <!-- terzo elemento flottante -->
+            <div class="title">
+              <img src="img/doc.svg" alt="documenti">
               <p>Monitora i tuoi progressi costantemente</p>
             </div>
 
@@ -122,10 +128,12 @@
 
       <section class="third clearfix">
 
+        <!--  sezione immagine -->
         <div class="mountain wt-50 float-left">
-          <img src="img/mountain.svg" alt="">
+          <img src="img/mountain.svg" alt="montagna">
         </div>
 
+        <!-- sezione piano personalizzato -->
         <div class="level wt-50 float-left">
           <div class="text-level ">
 
@@ -140,23 +148,24 @@
 
   </main>
   <footer>
+
     <div class="container-footer gray">
-      <div class="contenuti">
+      <div class="contenuti clearfix">
+
         <div class="text-footer float-left">
           <h2>Struttura un piano</h2>
         </div>
+
        <div class="section-footer float-left">
           <div class="sono">Sono</div>
           <div class="seleziona">
             Seleziona <i class="fas fa-caret-down"></i>
          </div>
-        
       </div>
 
       <div class="plane-footer ">
         <a class="btn btn-green btn-grande" href="">VISUALIZZA IL TUO PIANO</a>
       </div>
-
      
       </div>
     </div>
